atualizações do dia 3, incluindo saída em html